# Dodge-Dash

./: README.md
Dodge/: export_presets.cfg  project.godot  rust.gdextension
Dodge/addons/virtual_joystick/: virtual_joystick_instantiator.gd
Dodge/dodge_the_creeps_2d_assets/dodge_the_creeps_2d_assets/: Disclamer.md
Dodge/game/: General_Death_Effect_resource.tres
Dodge/game/HUD/: heart_pannel.tscn  heartcontainer.gd  hud.tscn
Dodge/game/Help/: Help.tscn
Dodge/game/bullet/: bullet.tscn
Dodge/game/enemy/: mob.tscn  mob_death_animation.tscn
Dodge/game/main/: main_scene.tscn  test.tscn
Dodge/game/player/: Player.tscn  Player_Blink.gdshader  player_blast_effect.tscn  player_death_effect.tscn
Game_Bin/Web/: index.html  rust.wasm
Rust/: Cargo.toml  full_compile.bat
Rust/src/: actortype.rs  bullet.rs  controler.rs  explosion_particle.rs  general_button_behaviour.rs  hud.rs  lib.rs  main_scene.rs  mindless_mover.rs  mob.rs  player.rs  specialbutton.rs  timetracker.rs  ui_button.rs
