[package]
name = "rust"
version = "0.1.0"
edition = "2021"
#make the wasm release not work?
#[profile.release]
#strip=true
#codegen-units = 1
#lto = true
#opt-level = 'z'
#panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master",features = ["experimental-wasm","lazy-function-tables"]}
nanoserde = "0.1.37"